# news_analyzer

./: .gitignore  README.md  dump.sql  pyproject.toml  statistics.html  template.html
news_analyzer/: database.py  setup_db.py  visualize.py
news_analyzer/database/: __init__.py  export.py  import.py  models.py  setup.py
news_analyzer/readers/: 20min.py  __init__.py  blick.py  tagesanzeiger.py
sql/: 01_create_db_and_tables.sql  02_create_views.sql  03_load_tables.sql  04_create_users.sql  05_clear_database.sql  05_create_sp.sql  drop_database.sql  initialize_database.sql  load_tables.sql
tests/: test_news_analyzer.py
