[tool.poetry]
name = "news_analyzer"
version = "0.1.0"
description = ""
authors = ["Yves Savoy <10594588+yvessavoy@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
feedparser = "^6.0.8"
requests = "^2.26.0"
PyMySQL = "^1.0.2"
cryptography = "^35.0.0"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
